# openrabbit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  claude.md  docker-compose.yml  pyproject.toml
.agent/: agent-specefication.md  architecture.md  fine-tunning.md  openrabbit-prd.md  outcome.md  rag-design.md  roadmap.md
.github/workflows/: ci.yml  release.yml  smoke.yml
changelog/: README.txt  v1.0.0.txt  v1.1.0.txt  v1.2.0.txt  v1.3.0.txt  v1.4.0.txt  v1.5.0.txt  v1.6.0.txt
configs/: training.yml
docs/: ast-review-controls.md  benchmark-corpus.md  context-precision.md  eval-reporting.md  github-actions.md  knowledge-connectors.md  local-quality-gates.md  memory-backends.md  model-finetuning.md  model-providers.md  pr-agent-gap-analysis.md  pr-memory.md  release-v1.1.0.md  release-v1.2.0.md  release-v1.3.0.md  release-v1.4.0.md  release-v1.5.0.md  release-v1.6.0.md  release-v1.7-plan.md  repository-guidelines.md
examples/github-actions/: openrabbit-review.yml
scripts/: README.md  smoke_test.py  train.py
src/: diff_summarization.py
src/agents/: __init__.py  architecture.py  base.py  bugs.py  coordinator.py  factory.py  llm.py  models.py  performance.py  prompting.py  security.py  test_coverage.py
src/benchmarks/: __init__.py  corpus.py  profiler.py  runner.py  schema.py  scorer.py
src/cli/: __init__.py  exit_codes.py  logging.py  main.py  templates.py
src/configs/: __init__.py  schema.py  settings.py
src/finetuning/: __init__.py  cleaner.py  config.py  dataset.py  evaluator.py  formatter.py  packager.py  trainer.py
src/github_/: __init__.py  client.py  diff.py  models.py  polling.py  pr.py  pr_commands.py  publisher.py  repository.py  state.py
src/knowledge/: __init__.py  connectors.py  context.py  context_packing.py  diagnostics.py  jira.py  linear.py  mcp_runtime.py  multi_repo.py  registry.py  relevance.py  web_search.py
src/memory/: __init__.py  backends.py  fingerprints.py  history.py  models.py  store.py
src/models/: __init__.py
src/openrabbit/: __init__.py
src/quality/: __init__.py  models.py  runner.py
src/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py  scanner.py  vector_store.py
src/ranking/: __init__.py  grounding.py  ranker.py
src/review_controls/: __init__.py  ast.py
tests/: conftest.py  test_ast_review_controls.py  test_docs.py  test_package.py  test_review_controls.py  test_smoke.py
tests/agents/: test_architecture_agent.py  test_bug_agent.py  test_coordinator.py  test_factory.py  test_performance_agent.py  test_prompting.py  test_security_agent.py  test_test_coverage_agent.py
tests/benchmarks/: test_corpus.py  test_profiler.py  test_runner.py  test_scorer.py
tests/cli/: test_ask_command.py  test_cli_polish.py  test_connector_health_command.py  test_describe_command.py  test_eval_command.py  test_improve_command.py  test_index_command.py  test_init_command.py  test_install_model.py  test_memory_command.py  test_model_health_command.py  test_review_command.py  test_review_context.py  test_review_pipeline.py  test_start_command.py
tests/configs/: test_settings.py
tests/docs/: test_github_actions_recipe.py
tests/finetuning/: test_cleaner.py  test_config.py  test_dataset.py  test_evaluator.py  test_formatter.py  test_packager.py  test_train_script.py  test_trainer.py
tests/github_/: test_client.py  test_diff.py  test_polling.py  test_pr_commands.py  test_pr_parser.py  test_publisher.py  test_repository.py  test_state.py
tests/knowledge/: test_connector_context.py  test_connectors.py  test_context_diagnostics.py  test_context_packing.py  test_jira.py  test_linear.py  test_mcp_runtime.py  test_multi_repo.py  test_registry.py  test_relevance.py  test_web_search.py
tests/memory/: __init__.py  test_backends.py  test_fingerprints.py  (+2 more)
(+48 files in other folders)
