[tool.poetry]
name = "openrabbit"
version = "0.1.0"
description = "Open-source, self-hosted AI Pull Request Review platform."
authors = ["Sohail Shaikh <sohailshaikharifshaikh07@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Sohail-Shaikh-07/openrabbit"
repository = "https://github.com/Sohail-Shaikh-07/openrabbit"
keywords = ["code-review", "llm", "ai", "github", "rag", "multi-agent", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [
    { include = "agents", from = "src" },
    { include = "api", from = "src" },
    { include = "cli", from = "src" },
    { include = "configs", from = "src" },
    { include = "finetuning", from = "src" },
    { include = "github_", from = "src" },
    { include = "models", from = "src" },
    { include = "rag", from = "src" },
    { include = "ranking", from = "src" },
]

# rag is included in coverage as it lands across Phase 3.

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
typer = ">=0.12"
pydantic = ">=2.7"
pydantic-settings = ">=2.4"
pyyaml = ">=6.0"
httpx = ">=0.27"
rich = ">=13.7"
structlog = ">=24.1"
tenacity = "^9.1.4"
tree-sitter-language-pack = ">=0.13,<1.0"
fastembed = ">=0.4"
numpy = ">=1.26"
qdrant-client = ">=1.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.6"
black = ">=24.4"
mypy = ">=1.10"
types-pyyaml = ">=6.0"
pre-commit = ">=3.7"
respx = "^0.23.1"

[tool.poetry.scripts]
openrabbit = "cli.main:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Tool configuration ----------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# Typer's option/argument pattern requires calling typer.Option/Argument in defaults.
"src/cli/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "cli", "configs", "finetuning", "github_", "models", "rag", "ranking"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_language_pack", "fastembed", "qdrant_client", "qdrant_client.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --cov=cli --cov=configs --cov=github_ --cov=rag --cov-fail-under=70"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:grpc.*",
    "ignore::DeprecationWarning:qdrant_client.*",
    "ignore:.*uses PyType_Spec.*:DeprecationWarning",
    "error::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
